--- a/about.html
+++ b/about.html
@@ -8,8 +8,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="../../docs-assets/ico/favicon.png">
 
-    <title>Xhuanyin - Free Bootstrap Theme </title>
-
+    <title>Xhuanyin - Free </title>
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
 
